fixing partners view on mobile

--- a/src/scss/_blocks.scss
+++ b/src/scss/_blocks.scss
@@ -48,15 +48,23 @@
     gap: 70px;
     justify-content: center;
   }
+  @media (max-width: 600px) {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 55px;
+  }
 }
 
 .partner-logo {
   height: auto;
+  @media (max-width: 600px) {
+    margin: 0 auto;
+  }
   &.mod-cosmos {
     width: 198px;
   }
   &.mod-eth {
-    width: 98px;
+    width: 138px;
   }
   &.mod-polkadot {
     width: 209px;
